--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -789,3 +789,18 @@ between Common Logic theories.},
   note = 	 {To appear},
 }
 
+@BOOK{AHS,
+AUTHOR = "J. Ad\'{a}mek and 
+H. Herrlich and
+G. Strecker",
+TITLE ="Abstract and Concrete Categories",
+PUBLISHER = "Wiley, New York",
+YEAR = 1990}
+
+@book{MacLane,
+   author =    {S. {Mac Lane}},
+   title =     {Categories for the Working Mathematician},
+   publisher = {Springer},
+   note = {Second edition},
+   year = 1998}
+
