added back reference in use case spec-2

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3054,7 +3054,7 @@ logical languages, and that covers at least the most relevant of the
 industrial use cases of specification refinement.
 
 A simple example is the refinement of the (purely declarative) sorting
-specification above into a specification of a particular sorting
+specification from use case in section \ref{spec-1} into a specification of a particular sorting
 algorithm (for simplicity, we choose insert sort):
 
 \begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,morekeywords={sort, ops, refinement, free,spec type, assoc, unit,props,op,spec,refined, via,generated, then,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,from},escapechar=@,mathescape]	
