- various minor edits - reference number updated

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -562,7 +562,7 @@ Version \version
 \vskip 12pt 
 \nointerlineskip
 
-OMG Document Number: ad/2014-10-01 \\
+OMG Document Number: ad/2015-05-03 \\
 Normative reference: \\
 Machine readable files(s): \\
 Normative: \\
@@ -3153,12 +3153,12 @@ A typical UML model involves diagrams of different types. Such UML models may ha
 requirements. Typical questions that arise in this context are, e.g.,
 
 \begin{itemize}
-\item whether the multiplicities in a class diagram are consistent with each other
+\item whether the multiplicities in a class diagram are consistent with each other;
 \item wether the attributes and operations in a state machine are
-available in a class diagram
-\item	  whether the sequential composition of actions in an interaction diagram is justified by an accompanying OCL specification,
-\item 	whether cooperating state machines comply with pre-/post-conditions and invariants
-\item 	if the behavior prescribed in an interaction diagram is realizable by several state machines cooperating according to a composite structure diagram.
+available in a class diagram;
+\item	  whether the sequential composition of actions in an interaction diagram is justified by an accompanying OCL specification;
+\item 	whether cooperating state machines comply with pre-/post-conditions and invariants;
+\item 	whether the behavior prescribed in an interaction diagram is realizable by several state machines cooperating according to a composite structure diagram.
 \end{itemize}
 Such questions are currently hard to answer in a systematic manner. One method to answer these questions and find such errors is a check for semantic 
 consistency. Under some restrictions, the proof of semantic consistency can be (at least partially) performed using model-checking tools like Hugo/RT \cite{knapp-wuttke:models06wsh:2007}. 
@@ -3215,7 +3215,7 @@ if a card and PIN number combination is valid, in the first case the
 verification is successful.  This interaction presumes that the system
 has an \uml{atm} and a \uml{bank} as objects. This can, e.g., be
 ensured by a \emph{composite structure diagram}, see
-Fig.~\ref{fig:system}, which --- among other things --- specifies the
+Fig.~\ref{fig:system}, which -- among other things -- specifies the
 objects in the initial system state.  Furthermore, it specifies that
 the communication between \uml{atm} and \uml{bank} goes through the
 two ports \uml{bankCom} and \uml{atmCom} linked by a connector.  The
@@ -3251,7 +3251,7 @@ the bank results in \uml{reenterPIN}, and the \emph{guard}
 \uml{trialsNum < 3} is true, the user can again enter a \uml{PIN}.
 
 
-The ATM example in Fig.~\ref{fig:psm} consists of five different
+The ATM example in Fig.~\ref{fig:atm-example} consists of five different
 models, which naturally form a network. Coherence of this network
 is expressed as its consistency.
 We assume that XMI representations of the
