small phrasing fix

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1428,7 +1428,7 @@ that serialization must look like in order to support this identifier injection.
 Well-behaved XML and RDF schemas support identifier injection in a `nice' way (rather than using
 text-level comments). In the worst case we cannot 
 inject anything into an OMS language fragment, because the OMS language serialization simply
-wouldn't allow us to write suitable comments, but we'd have to point into it from the enclosing context
+would not allow us to write suitable comments, but we'd have to point into it from the enclosing context
 by using \termref{standoff markup}.
 
 
